Livereloading, reactive nyancat

--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-react-display-name": "^6.25.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "connect-backbone-to-react": "^1.4.0",
     "del": "^3.0.0",
     "eslint": ">=3",
     "eslint-config-mixmax": "^0.6.0",
     "gulp": "^3.9.1",
+    "gulp-cached": "1.1.1",
+    "gulp-livereload": "3.8.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-watch": "^4.3.11",
     "multibuild": "^2.2.0",
     "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-root-import": "^0.2.2",
     "run-sequence": "^2.1.0"
   }
