--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "backbone": "^1.3.3",
     "backbone-publication": "^1.0.9",
     "express": "^4.15.4",
     "publication-client": "^1.4.6",
