Have the sun chase the spaceship
If the sun catches the spaceship, it’s game over.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-display-name": "^6.25.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "connect-backbone-to-react": "^1.4.0",
