--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "backbone-publication": "^1.0.9",
     "connect-livereload": "^0.6.0",
     "express": "^4.15.4",
+    "ink": "^0.3.1",
+    "ink-text-input": "^1.1.1",
     "publication-client": "^1.4.6",
     "publication-server": "github:mixmaxhq/publication-server#jeff/node8_support",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "yargs": "^10.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-display-name": "^6.25.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
