--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "backbone-publication": "^1.0.9",
+    "classnames": "^2.2.5",
     "connect-livereload": "^0.6.0",
     "express": "^4.15.4",
     "ink": "^0.3.1",
