--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "backbone-publication": "^1.0.9",
+    "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
     "connect-livereload": "^0.6.0",
     "express": "^4.15.4",
@@ -21,6 +22,7 @@
     "publication-client": "^1.4.6",
     "publication-server": "github:mixmaxhq/publication-server#jeff/node8_support",
     "underscore": "^1.8.3",
+    "uuid": "^3.1.0",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
