Run the server single-shot for use in production
So that a systemd script (forthcoming will be able to restart it.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp"
+    "start": "gulp",
+    "production": "export NODE_ENV=production && gulp js && node src/server/app.js"
   },
   "author": "",
   "license": "MIT",
